<resources>
    <string name="app_name">QuizzApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Quiz">Quiz</string>
    <string name="todo">TODO</string>
    <string name="questions_amount">Questions amount:</string>
    <string name="category">Category</string>
    <string name="title_home">title_home</string>
    <string name="title_dashboard">title_dashboard</string>
    <string name="title_notifications">title_notifications</string>
    <string name="difficulty">Difficulty</string>
    <string name="_0">0</string>
    <string name="start">START</string>

    <string-array name="array_spinner_category">
        <item>All</item>
        <item>Book</item>
        <item>Film</item>
        <item>Music</item>
    </string-array>

    <string-array name="array_spinner_Difficulty">
        <item>All</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

</resources>