<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/grey"
    tools:context=".presentation.mainfragment.MainFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessLeaf">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mar_16"
            android:text="@string/Quiz"
            android:textColor="@color/black"
            android:textSize="32sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/cube"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/amountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mar_16"
        android:layout_marginTop="24dp"
        android:text="@string/questions_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/amountNumberView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/sliderView"
        app:layout_constraintStart_toEndOf="@id/amountView"
        app:layout_constraintTop_toTopOf="@id/amountView"
         android:text="@string/_0"
        />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderView"
        android:valueFrom="0"
        android:valueTo="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/mar_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountView" />


    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mar_16"
        android:layout_marginTop="23dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sliderView" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/mar_16"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mar_16"
        android:layout_marginTop="23dp"
        android:text="@string/difficulty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategory" />

    <Spinner
        android:id="@+id/spinnerDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/mar_16"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDifficulty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start"
        />


</androidx.constraintlayout.widget.ConstraintLayout>